--- a/OracleJETApplication-V-2/views/partials/employee-basic-info-modal/employee-basic-info-modal-small.html
+++ b/OracleJETApplication-V-2/views/partials/employee-basic-info-modal/employee-basic-info-modal-small.html
@@ -28,21 +28,14 @@
                         </div>
                 </div>
 
-                <div class="oj-flex-item empInfo">
-<!--
-                    <div class="oj-flex-item">
-                        <label for="name">NAME</label>
-                        <br /><span id="name" class="txtHighlight" data-bind="text: basicEmpInfo().firstName + ' ' + basicEmpInfo().lastName"></span>
-                    </div>
--->
-
+                <div class="oj-flex-item">
 
                     <div class="oj-flex-item">
-                        <label for="homestore">HOME STORE</label>
+                        <label for="homestore"><strong>HOME STORE</strong></label>
                         <br /><span id="homestore" class="txtHighlight" data-bind="text: basicEmpInfo().homeStore"></span>
                     </div>
                     <div class="oj-flex-item">
-                        <label for="hiredate">HIRE DATE</label>
+                        <label for="hiredate"><strong>HIRE DATE</strong></label>
                         <br /><span id="hiredate" class="txtHighlight" data-bind="text: new Date(basicEmpInfo().hireDate).getYear();"></span>
                     </div>
                 </div>
