--- a/OracleJETApplication-V-2/views/labor-management/employees/employees-large.html
+++ b/OracleJETApplication-V-2/views/labor-management/employees/employees-large.html
@@ -12,33 +12,33 @@
 
         <form data-bind="submit: $parent.filteredAllPeople" id="peopleSearchForm" class="searchInputFields">
             <div class="oj-flex" >
-                <div class="oj-flex-item" style="background-color: #ffffff; padding: 15px; ">
-                    <div class="oj-flex-item" style="background-color: #ffffff;  width: 98%; border: 3px solid #000000">
-
-                        <div class="oj-flex-item" style="background-color: #e1e7ee; padding: 10px; ">
-                            <label >Search</label>
-                        </div>
-                        <div id="simplesearch" style="background-color: #ffffff; padding: 10px;" data-bind="visible: $parent.visibleAdvanceSearch()===false">
-                            <input class="oj-flex-item" style="background-color: #ffffff;  border: 1px solid #000000"
+                <div class="oj-flex-item">
+                    <div class="oj-flex-item searchFieldWrap">
+                        <div id="accordionPage" data-bind="ojComponent: {component: 'ojAccordion'}">
+                              <div id="c1">
+                                  <label class="searchTitleBar">Search</label>
+                                  <div>
+                        <div id="simplesearch" class="simplesearchWrap"  data-bind="visible: $parent.visibleAdvanceSearch()===false">
+                            <input class="oj-flex-item inputField"
                                    placeholder="Search for active names, stores, jobs" 
-                                   id="firstname" data-bind="value: $parent.firstNameSearch, ojComponent: {component: 'ojInputText',rootAttributes: {
-                                            style:'max-width:45em'}}"/>
-                            <input class="oj-flex-item oj-button-primary" id="submit" type="submit" 
-                                   data-bind="ojComponent: {component: 'ojButton', 
-                            label: 'Search', icons: { start: 'fa fa-search'} }" />
-                            <input class="oj-flex-item" id="reset" type="reset" data-bind="click: $parent.resetData, ojComponent: {component: 'ojButton', label: 'Clear'}" />
-                            <button class="oj-flex-item" id="hidesimple" style="float:right;" 
-                                   data-bind="click: $parent.hideSimpleSearch, ojComponent: {component: 'ojButton', label: 'Advance Search'}" />
-
+                                   id="firstname" data-bind="value: $parent.firstNameSearch, ojComponent: {component: 'ojInputText', rootAttributes:{class:'inputFieldWrap'}}"/>
+                            <div class="searchBtnWrap">
+                                <input class="oj-flex-item oj-button-primary" id="submit" type="submit"
+                                       data-bind="ojComponent: {component: 'ojButton',
+                                label: 'search', icons: { start: 'fa fa-search'} }" />
+<!--                                <input class="oj-flex-item" id="reset" type="reset" data-bind="click: resetData, ojComponent: {component: 'ojButton', label: 'Clear'}" />-->
+                                <button class="oj-flex-item" id="hidesimple"
+                                        data-bind="click: $parent.hideSimpleSearch, ojComponent: {component: 'ojButton', icons: {start: 'fa fa-search'}, label: 'advance search'}"></button>
+                            </div>
                         </div>
 
-                        <div id="advanceseach" style="background-color: #ffffff; padding: 10px;" data-bind="visible:  $parent.visibleAdvanceSearch">
+                        <div id="advanceseach" style="background-color: #ffffff; padding: 10px;" data-bind="visible: $parent.visibleAdvanceSearch">
                             <div class="oj-flex-item" style="background-color: #fffff; padding: 10px; ">
-                                <span style="font-style:bold">Advanced Search</span>
+                                <span class="advSearchLabel">Advanced Search</span>
                             </div>
 
                             <div class="oj-flex" style="background-color: #ffffff; height: auto">
-                                <div class="oj-lg-2 oj-md-2 oj-flex-item" style="padding: 10px; ">
+                                <div class="oj-flex-item advSearchCol">
                                     <label for="firstname">FIRST NAME</label>
                                     <input id="firstname" data-bind="value: $parent.advFirstNameSearch, ojComponent: {component: 'ojInputText'}"/>
 
@@ -47,7 +47,7 @@
 
                                 </div>
 
-                                <div class="oj-lg-2 oj-md-3 oj-flex-item" style="padding: 10px; ">
+                                <div class="oj-flex-item advSearchCol">
                                     <label for="homestore">HOME STORE ASSIGNMENT</label>
                                     <input placeholder="" id="homestore" data-bind="value: $parent.homeStoreSearch, ojComponent: {component: 'ojInputText'}"/>
 
@@ -56,7 +56,7 @@
 
                                 </div>
 
-                                <div class="oj-lg-3 oj-md-2 oj-flex-item" style="padding: 10px; ">
+                                <div class="oj-flex-item advSearchCol">
                                     <label for="job">JOB</label>
                                     <input placeholder="" id="job" data-bind="value: $parent.jobSearch, ojComponent: {component: 'ojInputText'}"/>
 
@@ -65,7 +65,7 @@
 
                                 </div>
 
-                                <div class="oj-lg-2 oj-md-2 oj-flex-item" style="padding: 10px; ">
+                                <div class="oj-flex-item advSearchCol">
                                     <label for="status">STATUS</label>
                                     <div>
                                         <div id="statuscheckboxSetId" aria-labelledby="mainlabelid" data-bind="ojComponent: {
@@ -85,13 +85,13 @@
                                                 <label for="inactiveterm">Inactive-Terminated</label>
                                             </span>
                                             <span class="oj-choice-row">
-                                                <input id="inactivleave" type="checkbox" value="Inactive-Leave"  checked>
-                                                <label for="inactivleave">Inactive-Leave Of Absence</label>
+                                                <input id="inactiveterm" type="checkbox" value="Inactive-Leave"  checked>
+                                                <label for="inactiveterm">Inactive-Leave Of Absence</label>
                                             </span>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="oj-lg-2 oj-md-2 oj-flex-item" style="padding: 10px; ">
+                                <div class="oj-flex-item advSearchCol">
                                     <label for="status">MORE OPTIONS</label>
                                     <div>
                                         <div id="morecheckboxSetId" aria-labelledby="mainlabelid" data-bind="ojComponent: {
@@ -114,19 +114,21 @@
 
                                 <input class="oj-flex-item oj-button-primary" id="advsubmit" type="submit"
                                        style="float:right;"
-                                       data-bind="click: $parent.advanceSearch,ojComponent: {component: 'ojButton', 
-                                        label: 'Search', icons: { start: 'fa fa-search'} }" />
+                                       data-bind="click:$parent.advanceSearch,ojComponent: {component: 'ojButton', 
+                                        label: 'search', icons: { start: 'fa fa-search'} }" />
                                 
+<!--
                                 <button class="oj-flex-item" id="advreset" style="float:right;" 
-                                        data-bind="click: $parent.advResetData, 
+                                        data-bind="click: advResetData, 
                                     ojComponent: {component: 'ojButton', label: 'Clear'}" />
+-->
 
                             </div> 
                         </div>
 
                     </div>
                 </div>
-            </div>
+            </div></div></div> </div>
 
         </form>
 
@@ -222,7 +224,7 @@
                     selectionMode: 'single',
                     currentItem: '100',
                     selection: ['100'],
-                    rootAttributes: {style: 'width:100%; height:50%; overflow:auto; margin-top: 5px'},
+                    rootAttributes: {class: 'employeeTable'},
                     scrollPolicyOptions: {fetchSize: 5}}">
             </ul>
             <div data-bind="ojComponent: {component: 'ojPagingControl',
@@ -238,7 +240,7 @@
                                     <span class="inActiveStatusCheck" data-bind="visible: status == 'Inactive-Terminated'"></span>
                                     <span class="activeStatusCheck" data-bind="visible: status == 'Active'"></span>
                                     <span class="imageOverlay"></span>
-                                    <img style="width:75px; height:75px;" data-bind="attr: {src: $parents[1].getPhoto($data['empId'])}" />
+                                    <img class="empImg" data-bind="attr: {src: $parents[1].getPhoto($data['empId'])}" />
                                 </div>
 
                                 <div class="oj-lg-3 oj-md-3 oj-flex-item">
