updated to adv search

--- a/OracleJETApplication-V-2/scss/oj-override.scss
+++ b/OracleJETApplication-V-2/scss/oj-override.scss
@@ -848,6 +848,9 @@ a.addEmp{
     padding: 0 0 10px 0;
     border-bottom: 1px solid $formBorders;
 }
+.advSearchWrap{
+    padding:10px;
+}
 .advSearchCol{
     border-right: 1px solid $formBorders;
     padding:10px 20px;
