--- a/OracleJETApplication-V-2/views/partials/employee-search/employee-search-large.html
+++ b/OracleJETApplication-V-2/views/partials/employee-search/employee-search-large.html
@@ -28,7 +28,7 @@
 
                         </div>
 
-                        <div id="advanceseach" style="background-color: #ffffff; padding: 10px;" data-bind="visible:visibleAdvanceSearch">
+                        <div id="advanceseach" class="advSearchWrap" data-bind="visible:visibleAdvanceSearch">
                             <div class="oj-flex-item" style="background-color: #fffff; padding: 10px; ">
                                 <span class="advSearchLabel">Advanced Search</span>
                             </div>
